@@ -28,14 +28,41 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
-		<maven.compiler.source>21</maven.compiler.source>
-		<maven.compiler.target>21</maven.compiler.target>
-		<logback.version>1.5.24</logback.version>
-		<lombok.version>1.18.36</lombok.version>
+		<java.version>25</java.version>
+		<maven.compiler.source>25</maven.compiler.source>
+		<maven.compiler.target>25</maven.compiler.target>
+		<logback.version>1.5.25</logback.version>
+		<lombok.version>1.18.40</lombok.version>
 		<mapstruct.version>1.6.3</mapstruct.version>
+		<assertj.version>3.27.7</assertj.version>
+		<httpclient.version>4.5.14</httpclient.version>
 	</properties>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-bom</artifactId>
+				<version>4.2.10.Final</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
+		<!-- Explicitly upgrade HttpClient to fix CVE-2020-13956 -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.version}</version>
+		</dependency>
+		<!-- Explicitly upgrade AssertJ to fix CVE-2026-24400 -->
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -203,6 +230,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<jvmArguments>--sun-misc-unsafe-memory-access=allow</jvmArguments>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -220,7 +248,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok-mapstruct-binding</artifactId>
-							<version>0.2.0</version>
+							<version>0.1.0</version>
 						</path>
 						<path>
 							<groupId>org.mapstruct</groupId>
@@ -228,6 +256,7 @@
 							<version>${mapstruct.version}</version>
 						</path>
 					</annotationProcessorPaths>
+					<release>${java.version}</release>
 					<compilerArgs>
 						<arg>-parameters</arg>
 					</compilerArgs>
@@ -237,7 +266,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+					<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off --sun-misc-unsafe-memory-access=allow</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
